--- a/style/style.css
+++ b/style/style.css
@@ -163,9 +163,12 @@ a:visited {
 }
 
 .header_basket {
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 0;
+    padding-bottom: 0;
     margin-right: 26px;
+    background: transparent;
+    border: none;
+    cursor: pointer;
 }
 
 .header_basket:hover .user_drop_basket {
@@ -246,9 +249,17 @@ a:visited {
     width: 250px;
 }
 
+.product-image__cart {
+    width: 140px;
+}
+
 .product-item {
     position: relative;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.product-item__cart {
+    position: relative;
 }
 
 .product-item:hover {
@@ -269,51 +280,96 @@ a:visited {
     color: #f16d7f;
 }
 
-#goods-list-section {
-    display: none;
-    position: absolute;
-    width: 100%;
-    height: 1000px;
-    top: 0;
-    left: 0;
+/***** CART *****/
+#item-cart:target {
+    display: block;
 }
 
-#goods-list-section #goods-list-section__modal {
-    box-shadow: 0 0 5px rgb(0 0 0 / 62%);
-    border-radius: 5px;
-    box-sizing: border-box;
-    right: 140px;
-    top: 100px;
+#item-cart {
+    display: none;
     position: absolute;
-    background-color: white;
-    padding: 20px;
-    color: black;
-    width: 260px;
+    top: 0;
+    right: 0;
     z-index: 3;
 }
 
-#goods-list-section #goods-list-section__modal h3,
-#goods-list-section #goods-list-section__modal p {
-    padding: 30px;
-    text-align: center;
+.user-cart {
+    position: absolute;
+    top: 80px;
+    right: 140px;
+    border: 1px solid #cecece;
+    padding: 15px;
+    background-color: #fff;
 }
 
-#goods-list-section #goods-list-section__modal .goods-list__product-box {
-    display: -webkit-box;
-    display: -ms-flexbox;
+.close-cart {
+    position: absolute;
+    right: 10px;
+    top: 4px;
+}
+
+.user-cart__item-cart {
     display: flex;
-    -ms-flex-pack: distribute;
-    justify-content: space-around;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    padding: 12px 0;
-    border-bottom: 1px solid rgba(238, 233, 233, 0.644);
+    flex-direction: row;
+    justify-content: center;
+    gap: 30px;
 }
 
-#goods-list-section #goods-list-section__modal .goods-list__product-box span {
-    width: 50%;
+.cart-item__text__title {
+    padding: 20px 0 15px 15px;
+    margin: 0;
+    text-transform: uppercase;
 }
+
+.cart-item__text__price {
+    padding: 0 0 20px 15px;
+    margin: 0;
+    font-size: 18px;
+    color: #f16d7f;
+}
+
+.cart-item__text__quantity {
+    padding: 0 0 10px 15px;
+    margin: 0;
+    font-size: 12px;
+    color: rgb(110, 110, 110);
+}
+.cart-item__text__cart-title {
+    padding: 0px 0 10px 15px;
+    margin: 0;
+    font-size: 14px;
+    color: rgb(110, 110, 110);
+}
+
+.cart-item__text__cart-price {
+    padding: 0 0 5px 15px;
+    margin: 0;
+    font-size: 16px;
+    color: rgb(110, 110, 110);
+}
+
+.add-btn {
+    margin-left: 15px;
+    margin-bottom: 20px;
+    padding: 10px 20px;
+    background-color: #f16d7f;
+    border: none;
+    cursor: pointer;
+    font-size: 15px;
+    color: #fff;
+}
+
+.remove-btn {
+    margin-left: 15px;
+    margin-bottom: 20px;
+    padding: 10px 20px;
+    background-color: #f16d7f;
+    border: none;
+    cursor: pointer;
+    font-size: 15px;
+    color: #fff;
+}
+
 /***** FOOTER *****/
 
 .footer {
